[tool.poetry]
name = "replica"
version = "0.1.0"
description = "Replica — a lightweight reverse proxy that mirrors content, sanitizes headers and optionally rewrites text via configurable replacements."
authors = ["Sarper AVCI <sarperavci20@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3.10"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
httpx = "^0.24.0"
pydantic = "^1.10.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
cachetools = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
respx = "^0.19.0"
httpx = "^0.24.0"
tox = "^3.24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"